Fix Bug #55726 (Changing the working directory makes router script inaccessible)